# walze-zwei

./: .gitignore  Cargo.toml
src/: error.rs  main.rs
src/commands/: alias.rs  context_cmd.rs  eval.rs  mod.rs  tz.rs
src/models/: mod.rs
src/utils/: macros.rs  mod.rs
walzecore/: Cargo.toml
walzecore/src/: lib.rs
walzecore/src/db/: database.rs  error.rs  mod.rs
walzecore/src/tz/: error.rs  mod.rs  stamp.rs
