workspace = { members = ["walzecore"] }

[package]
name = "walze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walzecore = { path = "walzecore" }
caith = { git = "https://github.com/Geobert/caith.git", rev = "58f96ff" }
chrono = { version = "0.4.35", features = ["std", "clock", "now", "alloc"] }
chrono-tz = "0.8.6"
dotenvy = "0.15.7"
once_cell = "1.19.0"
lazy_static = "1.4.0"
poise = { version = "0.6.1", features = ["cache"] }
regex = "1.10.3"
# scraper = "0.18.1"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures-util = "0.3.30"
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
